assets/styles.css
@import url("https://fonts.googleapis.com/css2?family=Staatliches&display=swap");

body {
  font-family: "Staatliches", Helvetica, Arial, sans-serif;
}

header p {
  font-family: "Staatliches", Helvetica, Arial, sans-serif;
}

p,
h3 {
  font-family: Helvetica, Arial, sans-serif;
}

@media (min-width: 1000px) {
  h1 {
    font-size: 5em;
  }
}

@media (max-width: 1000px) {
  h1 {
    font-size: 2.5em;
  }
}

@media (min-width: 1000px) {
  h2 {
    font-size: 4em;
  }
}

@media (max-width: 1000px) {
  h2 {
    font-size: 2em;
  }
}

.content-center {
  display: flex;
  justify-content: center;
  align-items: center;
}

.container {
  max-width: 100%;
}

/**
 * HERO
 */

header {
  width: 100%;
  height: 100vh;
  background-color: #000;
  background-image: url("./images/beaugrenelle-home.jpeg");
  background-position: center;
  background-repeat: no-repeat;
  background-size: auto 100%;
  color: #fff;
}

header > div {
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.4);
}

header h1 {
  text-align: center;
}

header nav {
  position: fixed;
  z-index: 2000;
  top: 0px;
  right: 0px;
}

header nav.open {
  width: 100vw;
  height: 100vh;
}

header nav.open > div {
  width: 100%;
  height: 100%;

  background-color: rgba(0, 0, 0, 0.9);
}

header nav div.burger-menu {
  position: absolute;
  top: 20px;
  right: 25px;
  width: 15px;
  height: 30px;
  cursor: pointer;
}

header nav div.burger-menu > div {
  width: 22px;
  height: 22px;
}

header nav div.burger-menu div.bar {
  width: 22px;
  height: 2px;
  margin: 4px 0px;
  transition: 0.45s cubic-bezier(0.4, 0, 0.2, 1);
}

header nav div.burger-menu div.bar {
  width: 22px;
  height: 2px;
  background: linear-gradient(
    45deg,
    #f09433 0%,
    #e6683c 25%,
    #dc2743 50%,
    #cc2366 75%,
    #bc1888 100%
  );
  margin: 4px 0px;
  transition: 0.45s cubic-bezier(0.4, 0, 0.2, 1);
}

header nav.open div.burger-menu div.bar-2 {
  width: 0px;
}

header nav.open div.burger-menu div.bar-1 {
  transform: translateY(6px) rotate(135deg);
}

header nav.open div.burger-menu div.bar-3 {
  transform: translateY(-6px) rotate(225deg);
}

header nav ul.menu {
  display: none;
}

header nav.open ul.menu {
  position: absolute;
  top: 0px;
  left: 0px;

  display: block;
}

header div.insta-logo {
  position: fixed;
  top: 22px;
  left: 15px;
  width: 30px;
  height: 30px;
  z-index: 2000;
}

.gradient-insta {
  background: linear-gradient(
    45deg,
    #f09433 0%,
    #e6683c 25%,
    #dc2743 50%,
    #cc2366 75%,
    #bc1888 100%
  );
  -webkit-text-fill-color: transparent;
  -webkit-background-clip: text;
}

.blue-letter {
  color: cornflowerblue;
}

header p {
  text-align: center;
}

/**
 * CONTENT 1
 */

article div.row {
  margin: 50px 0px;
}

/**
 * CONTENT 2
 */

section {
  background-color: #000;
  color: #fff;
  padding: 50px 0px;
  width: 100%;
}

section h2 {
  text-align: right;
  padding-bottom: 40px;
}

section h4 {
  color: white;
  text-align: center;
}

section .carousel {
  margin-top: 180px;
}

section img {
  cursor: pointer;
}

/* CAROUSEL */
.carousel-control-prev-icon,
.carousel-control-next-icon {
  height: 100px;
  width: 100px;
  background-image: none;
}

.carousel-control-next-icon:after {
  content: ">";
  font-size: 60px;
  color: white;
}

.carousel-control-prev-icon:after {
  content: "<";
  font-size: 60px;
  color: white;
}

/* LIGHTBOX */
#lightbox {
  position: fixed;
  z-index: 1000;
  top: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.8);
  display: none;
}

#lightbox.active {
  display: flex;
  justify-content: center;
  align-items: center;
}

#lightbox img {
  max-width: 100%;
  max-height: 100%;
  padding: 2px;
  background-color: black;
  border: 2px solid white;
}

#full-screen-div {
  position: fixed;
  display: none;
  z-index: 3000;
  bottom: 15px;
  left: 15px;
}

#full-screen-title {
  color: white;
  text-align: center;
}

#full-screen-div button {
  font-size: 20px;
}

#button-close {
  color: black;
  background: linear-gradient(
    45deg,
    #f09433 0%,
    #e6683c 25%,
    #dc2743 50%,
    #cc2366 75%,
    #bc1888 100%
  );
  border: 0;
  border-radius: 10%;
}

/**
 * CONTENT 3
 */
.profil-img {
  max-height: 150px;
  width: auto;
  border-radius: 50%;
  margin: 0 auto;
  margin-bottom: 10px;
}

#text-on-me {
  text-align: center;
}

article a {
  color: black;
  text-decoration: none;
}

/**
 * CONTENT 3
 */
#remerciements p {
  text-align: left;
}

#remerciements a {
  color: white;
  text-decoration: none;
}

/**
 * MENU
 */
.menu {
  display: inline-block;
  position: fixed;
  width: 100%;
  margin-top: 50px;
  text-align: center;
}

.menu > li {
  list-style: none;
  color: #fff;
  font-size: 1.5rem;
  padding-top: 5px;
}

.menu > li > a {
  color: inherit;
  text-decoration: none;
  transition: color 0.4s ease;
}

/*
 * APPEAR DURING SCROLLING
 */
.reveal {
  opacity: 0;
  transform: translateY(-30px);
}

.reveal-visible {
  opacity: 1;
  transform: translateY(0);
  transition: 1s cubic-bezier(0.5, 0, 0, 1);
}

